feat: add base APIs github/authorize & login/refresh
